2008-07-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetExpressionState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetAttributeValueState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs,
	  MonoDevelop.AspNet.StateEngine/AspNetDom.cs: Commit initial work on
	  ASP.NET parser extensions.
	* Makefile.am, AspNetAddIn.mdp: Updated.

2008-07-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Put path bar update
	  on a timeout so that it doesn't make selection too laggy.

2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Improve triggering
	  of attribute value completion.

2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: For
	  System.Drawing.Color names colours autocompletion entries, use a
	  block of the colour as the icon. Don't show system colours.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Implemented node
	  selection with the path bar using the new parser. Much more
	  reliable, but still breaks on selecting the node the caret's in.
	* gtk-gui/objects.xml, AspNetAddIn.mdp, Makefile.am: Removed
	  objects.xml.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs: Unneeded;
	  removed.
	* MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Stubbed.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Use the new XML
	  parser for ASP.NET completion.
	* gtk-gui/objects.xml, gtk-gui/gui.stetic, AspNetAddIn.mdp,
	  Makefile.am: Updated.
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Fix tag prefix
	  auto-generation logic.
	* MonoDevelop.AspNet.Parser/CompilationUnitVisitor.cs: Don't fold
	  regions by default.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 
